# python-sample

./: .gitignore  README.md  build_package.py  cache.py  colors.py  config.py  get_version.py  makefile  version.py
.github/workflows/: OnPush.yml  OnRelease.yml
cache/: cache.py  pyproject.toml  tests.py  tests_report.xml
cache/cache/: cache.py
cache/tests/: cache_tests.py
colors/: pyproject.toml  tests.py
colors/colors/: colors.py
colors/tests/: colors_tests.py
config/: base_tests.py  config.py  json_tests.py  pyproject.toml
config/config/: __init__.py  config.py
config/tests/: base_tests.py  env_tests.py  file_tests.py  ini_tests.py  json_tests.py  memory_tests.py  toml_tests.py  yaml_tests.py
http_code/: pyproject.toml  tests.py
http_code/http_code/: __init__.py  http_code.py
http_code/tests/: http_code_tests.py
singleton/: pyproject.toml
singleton/singleton/: singleton.py
singleton/tests/: singleton_tests.py
version/: pyproject.toml  tests.py  version.py
version/tests/: version_tests.py
version/version/: version.py
