[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cache"
dynamic = ["version"]
description = "A simple cache manager"
authors = [
    { name = "Antoine BUIREY", email = "antoine.buirey@gmail.com" }
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = [
    "cache"
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests"
]
python_files = [
    "*tests.py"
]
