[project]
name = "colors"
dynamic = ["version"]
description = "A color class allowing to manipulate colors"
authors = [
    { name = "Antoine BUIREY", email = "antoine.buirey@gmail.com" }
]
requires-python = ">=3.10"


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "."
]
python_files = [
    "tests.py"
]
