[project]
name = "config"
version = "0.1.0"
description = "A library to manage configuration files"
authors = [
    { name = "Antoine BUIREY", email = "antoine.buirey@gmail.com" }
]
requires-python = ">=3.8"

[tool.setuptools]
packages = { find = { include = ["config*"], exclude = ["*_tests"] } }

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "."
]
python_files = [
    "*_tests.py"
]
