[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "config"
dynamic = ["version"]
description = "A library to manage configuration files"
authors = [
    { name = "Antoine BUIREY", email = "antoine.buirey@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "tomlkit>=0.13.2",
    "jsonschema>=4.25.1",
    "requests>=2.32.5",
    "PyYAML>=6.0.3"
]

[tool.setuptools.packages.find]
include = [
    "config"
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests"
]
python_files = [
    "*tests.py"
]
