[project]
name = "http_code"
dynamic = ["version"]
description = "A list of HTTP status codes"
authors = [
    { name = "Antoine BUIREY", email = "antoine.buirey@gmail.com" }
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = [
    "http_code"
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests"
]
python_files = [
    "*tests.py"
]
